attempt to fix spacing for widgets on homepage

--- a/css/fullscreen-header-and-nav.less
+++ b/css/fullscreen-header-and-nav.less
@@ -96,13 +96,18 @@ Header
 
 /* Header Profile Widgets */
 
-.details-container {
+.brand {
     padding: 3em 0;
     @media only screen and (max-width: 555px) {
         padding: 1em 0;
     }
+}
+
+.details-container {
+    padding-bottom: 3em;
     .widget.button {
         padding: 2em 0 0;
+        margin: 0;
         @media only screen and (max-width: 555px) {
             padding: 0;
         }
